--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
 
+body {
+   background-color: rgb(192, 250, 135);
+   font-size: 28px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: 400;
+   line-height: 2.5;
+}
 
 h1 {
-   text-align: center; 
+   text-align: center;
 }
 
 nav ul{
@@ -12,6 +19,14 @@ nav ul{
 nav ul li {
    display: inline-block;
    font-size: 0.75 em;
+   padding: 5px;
+}
+
+section {
+   padding-bottom: 5%;
+   padding-top: 5%;
+   padding-left: 5%;
+   padding-right: 5%
 }
 
 p {
@@ -22,11 +37,16 @@ figure {
    display: flex;
    margin: 30px;
    padding: 30px;
+   position: relative;
+   top: 50px;
+   bottom: 50px;
 }
 
 figcaption {
   font-style: italic;
-  text-align: center; 
+  text-align: center;
+  font-size: 20px;
+  padding: 5%;
 }
 
 .sideways {
@@ -39,83 +59,91 @@ img {
 }
 
 #Colleen {
-   width: 30%;
-   height: 60%;
+   width: 50%;
+   height: 100%;
    float: left;
 }
 
 #sign {
-  width: 30%;
-  height: 60%;
+  width: 60%;
+  height: 30%;
   float: right;
 }
 
 #slipper {
-   width: 30%;
+   width: 100%;
    height: 60%;
-   float: right;
 }
 
 #view {
-   width: 30%;
-   height: 60%;
+   width: 100%;
+   height: 75%;
+   float: right;
+   padding-top: 30px;
 }
 
 #tent {
-   width: 30%;
-   height: 60%;
+   width: 80%;
+   height: 90%;
    float: left;
+   padding: 30px;
 }
 
 #river {
-   width: 50%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
    float: right;
+   padding-top: 5%;
 }
 
 #friends {
-   width: 30%;
-   height: 50%;
+   width: 60%;
+   height: 100%;
 }
 
 
 #mainStage {
-   width: 30%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
 }
 
 #fromTheStage {
-   width: 30%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
 }
  
 #Lucas {
-   width: 30%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
 }
 
 #Caleb {
-   width: 30%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
 }
 
 #bakery {
-   width: 30%;
-   height: 50%;
+   width: 100%;
+   height: 100%;
 }
 
 #Dennis {
-   width: 30%;
-   height: 50%;
+   width: 60%;
+   height: 80%;
+   float: right;
+   padding-bottom: 20px;
+   top: 10px;
 }
 
 #family {
-   width: 50%;
-   height: 75%;
+   width: 60%;
+   height:80%;
 }
 
 footer {
     text-align: center;
+    height: 100px;
+    padding-top: 30px;
 }
 @media screen and (max-width: 680px) {
 	nav ul li {
