--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 
 body {
-   background-color: rgb(192, 250, 135);
+   background-color: hsl(191, 93%, 48%);
    font-size: 28px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 400;
-   line-height: 2.5;
+   line-height: 2.0;
+}
+
+.top {
+   background-image: url("images/campers.jpg");
+   background-color: #cccccc;
+   height: 500px;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   position: relative;
+
+
 }
 
 h1 {
@@ -20,6 +32,10 @@ nav ul li {
    display: inline-block;
    font-size: 0.75 em;
    padding: 5px;
+}
+
+a {
+   color: #cccccc;
 }
 
 section {
@@ -42,11 +58,16 @@ figure {
    bottom: 50px;
 }
 
+h2 {
+   text-align: center;
+}
+
 figcaption {
   font-style: italic;
   text-align: center;
   font-size: 20px;
   padding: 5%;
+  line-height: 1.30;
 }
 
 .sideways {
@@ -130,9 +151,9 @@ img {
 #Dennis {
    width: 60%;
    height: 80%;
-   float: right;
-   padding-bottom: 20px;
-   top: 10px;
+   display: flex;
+   padding-bottom: 5px;
+   padding-top: 20px;
 }
 
 #family {
